// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleCards Paragraph Check Paragraph 1`] = `
Object {
  "p": Object {
    "color": "",
    "color-global": true,
    "font-family-general": "Roboto",
    "font-size-general": 20,
    "font-size-unit-general": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 20,
    "font-size-xxl": 20,
    "font-style-general": "italic",
    "font-weight-general": "300",
    "letter-spacing-general": 5,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 5,
    "letter-spacing-xxl": 0,
    "line-height-general": 0,
    "line-height-unit-general": "px",
    "line-height-unit-xl": "px",
    "line-height-unit-xxl": "px",
    "line-height-xl": 0,
    "line-height-xxl": 30,
    "palette-color": 4,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "overline",
    "text-direction-general": "ltr",
    "text-indent-general": 44,
    "text-orientation-general": "mixed",
    "text-transform-general": "capitalize",
  },
}
`;

exports[`StyleCards Paragraph Works on responsive 1`] = `
Object {
  "p": Object {
    "color": "",
    "color-global": false,
    "font-family-general": "Roboto",
    "font-size-general": 16,
    "font-size-m": 15,
    "font-size-unit-general": "px",
    "font-size-unit-xl": "px",
    "font-size-unit-xxl": "px",
    "font-size-xl": 16,
    "font-size-xxl": 20,
    "font-style-general": "normal",
    "font-style-m": "italic",
    "font-weight-general": 400,
    "font-weight-m": "400",
    "letter-spacing-general": 0,
    "letter-spacing-m": 5,
    "letter-spacing-unit-general": "px",
    "letter-spacing-unit-xl": "px",
    "letter-spacing-unit-xxl": "px",
    "letter-spacing-xl": 0,
    "letter-spacing-xxl": 0,
    "line-height-general": 26,
    "line-height-m": 0,
    "line-height-unit-general": "px",
    "line-height-unit-xl": "px",
    "line-height-unit-xxl": "px",
    "line-height-xl": 26,
    "line-height-xxl": 30,
    "palette-color": 3,
    "palette-opacity": 1,
    "palette-status": true,
    "text-decoration-general": "unset",
    "text-decoration-m": "underline",
    "text-direction-general": "ltr",
    "text-direction-m": "ltr",
    "text-indent-m": 44,
    "text-orientation-general": "unset",
    "text-orientation-m": "mixed",
    "text-transform-general": "none",
    "text-transform-m": "capitalize",
  },
}
`;
